@@ -1,17 +1,22 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+
 <html>
 <head>
   <title>$title</title>
   <link rel="stylesheet" href="$stylesheet">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 
-<h1>$photoframe</h1>
+<h1>$title</h1>
+
+<h2>$photoframe</h2>
 
 <table>
 $photoframe_table
 </table>
 
-<h1>$screensaver</h1>
+<h2>$screensaver</h2>
 
 <table>
 $screensaver_table
