@@ -1,4 +1,4 @@
 <tr>
-<td class="photo"><a href="$page_url"><img class="photo" src="$url"></a></td>
-<td>$info</td>
+<td class="photo"><a href="$page_url"><img class="photo" src="$url" alt=""></a></td>
+<td class="info">$info</td>
 </tr>
